# PyCharmMiscProject

./: .gitignore  pyproject.toml
flowtest/: README.md  pyproject.toml
src/flowtest/: main.py
src/flowtest/crews/poem_crew/: poem_crew.py
