[project]
name = "flowtest"
version = "0.1.0"
description = "flowtest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.0a1"
]

[project.scripts]
kickoff = "flowtest.main:kickoff"
run_crew = "flowtest.main:kickoff"
plot = "flowtest.main:plot"
run_with_trigger = "flowtest.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
